# adam

./: .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
examples/balagan-tower-defense/: README.md  spec.md  tech-stack.md
src/adam/: __init__.py  __main__.py  config.py  errors.py  logging_config.py  profiles.py  project.py  types.py
src/adam/agents/: __init__.py  architect.py  base.py  build_analyser.py  change_planner.py  diagnostician.py  file_implementer.py  fix_agent.py  integration_auditor.py  module_planner.py  repair_agent.py  route_discoverer.py  scaffolder.py  spec_differ.py  supervisor.py  test_writer.py
src/adam/cli/: app.py  bootstrap.py  checkpoints.py  display.py
src/adam/context/: __init__.py  condenser.py  fingerprint.py  loader.py
src/adam/db/: session.py
src/adam/execution/: __init__.py  dependencies.py  dev_server.py  runner.py
src/adam/git/: __init__.py  manager.py
src/adam/inspection/: __init__.py  api_smoke.py  cli_verify.py  evaluator.py  screenshotter.py
tests/: test_bootstrap.py  test_checkpoints.py  test_context_loader.py  test_dependencies.py  test_dev_server.py  test_display.py  test_e2e.py  test_execution.py  test_file_classifier.py  test_file_loop_extras.py  test_git_manager.py  test_inspection.py  test_integration.py  test_json_extract.py  test_llm_client.py  test_obligations.py  test_observation.py  test_profiles.py  test_project.py  test_prompts.py  test_repair_planner.py  test_stop_conditions.py  test_types.py  test_validation.py  test_visual_pipeline.py
(+64 files in other folders)
