[project]
name = "adam-cli"
version = "0.5.3"
description = "Orchestrated long-form software engineering system"
readme = "README.md"
authors = [
    { name = "Avram Score", email = "ascore@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.13,<2.0",
    "anthropic>=0.40,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "rich>=13.0,<14.0",
    "prompt-toolkit>=3.0,<4.0",
    "click>=8.0,<9.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29,<1.0"]
visual = ["playwright>=1.40,<2.0"]
redis = ["redis>=5.0,<6.0"]
all = ["asyncpg>=0.29,<1.0", "playwright>=1.40,<2.0", "redis>=5.0,<6.0"]

[project.scripts]
adam = "adam.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adam"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "factory-boy>=3.3,<4.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.6,<1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
